--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-    "name": "node-cast",
-    "version": "0.0.0",
-    "description": "A fancy, Node-based system for FRC webcast overlays.",
-    "dependencies": {
-        "express": "4.x.x",
-        "nunjucks": "2.x.x"
-    },
-    "devDependencies": {
-        "node-sass": "^3.4.2",
-        "normalize-scss": "^4.0.0",
-        "support-for": "^1.0.2"
-    }
+  "name": "node-cast",
+  "version": "0.0.0",
+  "description": "A fancy, Node-based system for FRC webcast overlays.",
+  "dependencies": {
+    "express": "4.x.x",
+    "nunjucks": "2.x.x"
+  },
+  "devDependencies": {
+    "chai": "^3.4.1",
+    "node-sass": "^3.4.2",
+    "normalize-scss": "^4.0.0",
+    "support-for": "^1.0.2"
+  }
 }
