--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "description": "A fancy, Node-based system for FRC webcast overlays.",
   "dependencies": {
+    "body-parser": "^1.14.1",
     "express": "4.x.x",
     "mkdirp": "^0.5.1",
     "nunjucks": "2.x.x"
