--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "body-parser": "^1.14.1",
     "express": "4.x.x",
     "mkdirp": "^0.5.1",
-    "nunjucks": "2.x.x"
+    "nunjucks": "2.x.x",
+    "websocket": "^1.0.22"
   },
   "devDependencies": {
     "chai": "^3.4.1",
